--- a/curso/HTML5/PRIMEPAG.HTML
+++ b/curso/HTML5/PRIMEPAG.HTML
@@ -1,8 +1,12 @@
-<HTML>
-    <HEAD>
-        <TITLE>PRIMEIRO PROGRAMA</TITLE>
-    </HEAD>
-    <BODY>
-        <P>ISSO E UM PARAGRAFO</P>
-    </BODY>
-</HTML>
+<!DOCTYPE html> <!--TIPO DE DOCUMENTO-->
+<html lang="pt-br"> <!--IDIOMA DA PAGINA-->
+<head><!--CABEÇALHO DA PAGINA-->
+    <meta charset="UTF-8"> <!---->
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"><!---->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"><!---->
+    <title>Document</title><!--TITULO DO NAVEGADOR -->
+</head>
+<body>
+    
+</body>
+</html>
