--- a/curso/HTML5/PRIMEPAG.HTML
+++ b/curso/HTML5/PRIMEPAG.HTML
@@ -1,12 +1,12 @@
 <!DOCTYPE html> <!--TIPO DE DOCUMENTO-->
 <html lang="pt-br"> <!--IDIOMA DA PAGINA-->
 <head><!--CABEÇALHO DA PAGINA-->
-    <meta charset="UTF-8"> <!---->
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"><!---->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"><!---->
+    <meta charset="UTF-8"> <!--TIPO DE CARACTERES-->
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"><!--COMPATIBILIDADE INTERNET EXPLORE-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"><!--TUDO QUE ESTA EM BODY , TAMANHO DO APARELHO , ESCALA-->
     <title>Document</title><!--TITULO DO NAVEGADOR -->
 </head>
-<body>
-    
+<body><!--CORPO DA PAGINA-->
+    <p>paragrafo</p><!--paragrafo-->
 </body>
 </html>
