--- a/curso/HTML5/PRIMEPAG.HTML
+++ b/curso/HTML5/PRIMEPAG.HTML
@@ -4,7 +4,7 @@
     <meta charset="UTF-8"> <!--TIPO DE CARACTERES-->
     <meta http-equiv="X-UA-Compatible" content="IE=edge"><!--COMPATIBILIDADE INTERNET EXPLORE-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"><!--TUDO QUE ESTA EM BODY , TAMANHO DO APARELHO , ESCALA-->
-    <title>Document</title><!--TITULO DO NAVEGADOR -->
+    <title>AULA 1</title><!--TITULO DO NAVEGADOR -->
 </head>
 <body><!--CORPO DA PAGINA-->
     <p>paragrafo</p><!--paragrafo-->
