--- a/curso/HTML5/PRIMEPAG.HTML
+++ b/curso/HTML5/PRIMEPAG.HTML
@@ -1,12 +1,14 @@
 <!DOCTYPE html> <!--TIPO DE DOCUMENTO-->
 <html lang="pt-br"> <!--IDIOMA DA PAGINA-->
-<head><!--CABEÇALHO DA PAGINA-->
+<head><!--CABEÇALHO DA PAGINA -->
     <meta charset="UTF-8"> <!--TIPO DE CARACTERES-->
     <meta http-equiv="X-UA-Compatible" content="IE=edge"><!--COMPATIBILIDADE INTERNET EXPLORE-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"><!--TUDO QUE ESTA EM BODY , TAMANHO DO APARELHO , ESCALA-->
     <title>AULA 1</title><!--TITULO DO NAVEGADOR -->
 </head>
 <body><!--CORPO DA PAGINA-->
+    <h1>CABEÇALHO 1</h1><!--CABECALHO DE NIVEL 1-->
+    <h2>CABEÇALHO 2</h2><!--CABECALHO DE NIVEL 1 ATE 6-->
     <p>paragrafo</p><!--paragrafo-->
 </body>
 </html>
