--- a/curso/HTML5/PRIMEPAG.HTML
+++ b/curso/HTML5/PRIMEPAG.HTML
@@ -9,6 +9,6 @@
 <body><!--CORPO DA PAGINA-->
     <h1>CABEÇALHO 1</h1><!--CABECALHO DE NIVEL 1-->
     <h2>CABEÇALHO 2</h2><!--CABECALHO DE NIVEL 1 ATE 6-->
-    <p>paragrafo</p><!--paragrafo-->
+    <p>Lorem <!--GERAR PALAVRAS ALEATORES DE EX.-->, ipsum dolor sit amet consectetur adipisicing elit. Consequuntur earum incidunt amet fuga quidem, tempora nulla quos, nemo saepe modi officia nostrum ipsum eum maxime rerum reprehenderit quisquam quaerat dolore.</p><!--paragrafo-->
 </body>
 </html>
