--- a/curso/HTML5/PRIMEPAG.HTML
+++ b/curso/HTML5/PRIMEPAG.HTML
@@ -1,4 +1,4 @@
-<!DOCTYPE html> <!--TIPO DE DOCUMENTO-->
+<!DOCTYPE html> <!--TIPO DE DOCUMENTO "ATALHO DIGITAR ! E TAB"-->
 <html lang="pt-br"> <!--IDIOMA DA PAGINA-->
 <head><!--CABEÇALHO DA PAGINA -->
     <meta charset="UTF-8"> <!--TIPO DE CARACTERES-->
@@ -14,7 +14,7 @@
 
     <br><!--QUEBRAR LINHA , ESPACAR LINHAS-->
 
-
+    <a href="youtube.com">link do youtube</a><!--CRIAR LINK "ATALHO DIGITAR LETRA A E TAB"-->
 </body>
 
 </html>
