--- a/curso/HTML5/PRIMEPAG.HTML
+++ b/curso/HTML5/PRIMEPAG.HTML
@@ -10,11 +10,11 @@
     <h1>CABEÇALHO 1</h1><!--CABECALHO DE NIVEL 1-->
     <hr><!--GERAR LINHA DIVISORIA-->
     <h2>CABEÇALHO 2</h2><!--CABECALHO DE NIVEL 1 ATE 6-->
-    <p>Lorem <!--GERAR PALAVRAS ALEATORES DE EX.-->, ipsum dolor sit amet consectetur adipisicing elit. Consequuntur earum incidunt amet fuga quidem, tempora nulla quos, nemo saepe modi officia nostrum ipsum eum maxime rerum reprehenderit quisquam quaerat dolore.</p><!--paragrafo-->
+    <p>Lorem <!--GERAR PALAVRAS ALEATORES DE EX.-->, ipsum dolor sit amet consectetur adipisicing elit. <br>Consequuntur earum incidunt amet fuga quidem, tempora nulla quos, nemo saepe modi officia nostrum ipsum eum maxime rerum reprehenderit quisquam quaerat dolore.</p><!--paragrafo-->
 
     <br><!--QUEBRAR LINHA , ESPACAR LINHAS-->
 
-    <a href="youtube.com">link do youtube</a><!--CRIAR LINK "ATALHO DIGITAR LETRA A E TAB"-->
+    <a href="www.youtube.com">link do youtube</a><!--CRIAR LINK "ATALHO DIGITAR LETRA A E TAB"-->
 </body>
 
 </html>
