--- a/curso/HTML5/PRIMEPAG.HTML
+++ b/curso/HTML5/PRIMEPAG.HTML
@@ -14,7 +14,7 @@
 
     <br><!--QUEBRAR LINHA , ESPACAR LINHAS-->
 
-    <a href="https://www.youtube.com/">link do youtube</a><!--CRIAR LINK "ATALHO DIGITAR LETRA A E TAB"-->
+    <a href="https://www.youtube.com/" target="_blank"><!--BLANK"PARA ABRIR LINK EM OUTRA PAGINA"--> link do youtube</a><!--CRIAR LINK "ATALHO DIGITAR LETRA A E TAB"-->
 </body>
 
 </html>
