--- a/curso/HTML5/PRIMEPAG.HTML
+++ b/curso/HTML5/PRIMEPAG.HTML
@@ -9,12 +9,23 @@
 <body><!--CORPO DA PAGINA-->
     <h1>CABEÇALHO 1</h1><!--CABECALHO DE NIVEL 1-->
     <hr><!--GERAR LINHA DIVISORIA-->
-    <h2>CABEÇALHO 2</h2><!--CABECALHO DE NIVEL 1 ATE 6-->
     <p>Lorem <!--GERAR PALAVRAS ALEATORES DE EX.-->, ipsum dolor sit amet consectetur adipisicing elit. <br>Consequuntur earum incidunt amet fuga quidem, tempora nulla quos, nemo saepe modi officia nostrum ipsum eum maxime rerum reprehenderit quisquam quaerat dolore.</p><!--paragrafo-->
 
     <br><!--QUEBRAR LINHA , ESPACAR LINHAS-->
 
+    <h2>INSERINDO LINK</h2><!--CABECALHO DE NIVEL 1 ATE 6-->
+
     <a href="https://www.youtube.com/" target="_blank"><!--BLANK"PARA ABRIR LINK EM OUTRA PAGINA"--> link do youtube</a><!--CRIAR LINK "ATALHO DIGITAR LETRA A E TAB"-->
+
+    <H1>INSERINDO IMAGEM</H1>
+
+    <img src="IMAGENS/images.png" alt="logo html" width="400"><!--INSERIR IMAGEM , ALT "NOME DA IMAGEM" , WIDTH "TAMANHO DA IMAGEM EM PIXEL"-->
+
+
+
+
+
 </body>
+
 
 </html>
