--- a/curso/HTML5/PRIMEPAG.HTML
+++ b/curso/HTML5/PRIMEPAG.HTML
@@ -3,26 +3,43 @@
 <head><!--CABEÇALHO DA PAGINA -->
     <meta charset="UTF-8"> <!--TIPO DE CARACTERES-->
     <meta http-equiv="X-UA-Compatible" content="IE=edge"><!--COMPATIBILIDADE INTERNET EXPLORE-->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"><!--TUDO QUE ESTA EM BODY , TAMANHO DO APARELHO , ESCALA-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"><!--TUDO QUE ESTA EM BODY , 
+        TAMANHO DO APARELHO , ESCALA-->
     <title>AULA 1</title><!--TITULO DO NAVEGADOR -->
 </head>
 <body><!--CORPO DA PAGINA-->
-    <h1>CABEÇALHO 1</h1><!--CABECALHO DE NIVEL 1-->
+    <h1>CABEÇALHO 1</h1><!--CABECALHO DE NIVEL 1 CABEÇALHO VAI DE  1 ATE 6-->
     <hr><!--GERAR LINHA DIVISORIA-->
-    <p>Lorem <!--GERAR PALAVRAS ALEATORES DE EX.-->, ipsum dolor sit amet consectetur adipisicing elit. <br>Consequuntur earum incidunt amet fuga quidem, tempora nulla quos, nemo saepe modi officia nostrum ipsum eum maxime rerum reprehenderit quisquam quaerat dolore.</p><!--paragrafo-->
+    <p>Lorem <!-- TERMO LOREM GERA PALAVRAS ALEATORIAS DE EX.-->, ipsum dolor sit amet consectetur adipisicing elit. 
+        <br>Consequuntur earum incidunt amet fuga quidem, tempora nulla quos, nemo
+         saepe modi officia nostrum ipsum eum maxime rerum reprehenderit quisquam quaerat dolore.</p><!--paragrafo-->
 
     <br><!--QUEBRAR LINHA , ESPACAR LINHAS-->
 
-    <h2>INSERINDO LINK</h2><!--CABECALHO DE NIVEL 1 ATE 6-->
+    <h2>INSERINDO LINK</h2><!--CABECALHO DE NIVEL 2 CABEÇALHO VAI DE  1 ATE 6-->
 
-    <a href="https://www.youtube.com/" target="_blank"><!--BLANK"PARA ABRIR LINK EM OUTRA PAGINA"--> link do youtube</a><!--CRIAR LINK "ATALHO DIGITAR LETRA A E TAB"-->
+    <a href="https://www.youtube.com/" target="_blank">link do youtube</a>
+    <!--CRIAR LINK "ATALHO DIGITAR LETRA A E TAB"BLANK"PARA ABRIR LINK EM OUTRA PAGINA-->
 
     <H1>INSERINDO IMAGEM</H1>
 
-    <img src="IMAGENS/images.png" alt="logo html" width="400"><!--INSERIR IMAGEM , ALT "NOME DA IMAGEM" , WIDTH "TAMANHO DA IMAGEM EM PIXEL"-->
+    <img src="IMAGENS/images.png" alt="logo html" width="400"><!--INSERIR IMAGEM , ALT "NOME DA IMAGEM" 
+        , WIDTH "TAMANHO DA IMAGEM EM PIXEL OU COLOCAR EM PORCENTAGEM EX: 100% , 80%"-->
 
+    <h3>LISTA NUMERADA</h3>
 
+    <ul><!--CRIAR LISTA NAO NUMERADA-->
+        <li>ITEM DA LISTA</li> <!--CRIAR ITEM DA LISTA-->
+        <li>ITEM DA LISTA</li>
+        <li>ITEM DA LISTA</li>
+    </ul>
 
+    <ol><!--LISTA NUMERADA-->
+        <li>ITEM DA LISTA</li> <!--SE DIGITAR SEM TAG LI*3 JA SE CRIA 3 ITEM AUTOMATICOS-->
+        <li>ITEM DA LISTA</li>
+        <li>ITEM DA LISTA</li>
+
+    </ol>
 
 
 </body>
