--- a/curso/HTML5/PRIMEPAG.HTML
+++ b/curso/HTML5/PRIMEPAG.HTML
@@ -41,6 +41,20 @@
 
     </ol>
 
+    <h2>TAG DE USO GENERICO</h2>
+
+    <P>Lorem ipsum <div>COLOR</div><!-- DIV SEPARA A PALAVRA OU IMAGEM E UM BLOCO SEPARADO--> dolor sit amet, consectetur 
+        <span>COLOR</span><!-- SPAN CRIA UMA PONTE PARA USAR FORMATAÇÃO NO CSS-->adipisicing elit. Natus impedit labore fugiat 
+        voluptas officia 
+        aspernatur repudiandae consectetur corporis unde? Odio perferendis odit veritatis repudiandae tempore. 
+        Quos autem iste dolore modi?</P>
+
+
+
+
+
+
+
 
 </body>
 
