--- a/curso/HTML5/PRIMEPAG.HTML
+++ b/curso/HTML5/PRIMEPAG.HTML
@@ -294,12 +294,11 @@
                    <br>
                     <div>
                         <label for="barra:"> ENVIAR :</label> <!--CRIA UM FORMULARIO PARA BOTAO ENVIAR-->
-                        <input type="submit" id="enviar"  name="enviar" value="enviar">
+                        <input type="submit" id="enviar"  name="en" value="enviar">
                     </div>
 
 
                 
-
 
 
                     
