--- a/curso/HTML5/PRIMEPAG.HTML
+++ b/curso/HTML5/PRIMEPAG.HTML
@@ -294,7 +294,7 @@
                    <br>
                     <div>
                         <label for="barra:"> ENVIAR :</label> <!--CRIA UM FORMULARIO PARA BOTAO ENVIAR-->
-                        <input type="submit" id="enviar"  name="en" value="enviar">
+                        <input type="submit" id="enviar"  name="enviar" value="enviar">
                     </div>
 
 
