--- a/curso/HTML5/PRIMEPAG.HTML
+++ b/curso/HTML5/PRIMEPAG.HTML
@@ -59,7 +59,7 @@
 
     <div class="bg"> </div>
     
-    <h1 >CABEÇALHO 1 </h1><!--CABECALHO DE NIVEL 1 CABEÇALHO VAI DE  1 ATE 6 , USE STYLE PARA FORMATAR PALAVRAS EM CSS-->
+    <h1 >CABEÇALHO 1 H1 </h1><!--CABECALHO DE NIVEL 1 CABEÇALHO VAI DE  1 ATE 6 , USE STYLE PARA FORMATAR PALAVRAS EM CSS-->
     <hr><!--GERAR LINHA DIVISORIA-->
     <p>Lorem <!-- TERMO LOREM GERA PALAVRAS ALEATORIAS DE EX.-->, ipsum dolor sit amet consectetur adipisicing elit. 
         <br>Consequuntur earum incidunt amet fuga quidem, tempora nulla quos, nemo
